--- a/index.html
+++ b/index.html
@@ -38,19 +38,19 @@
     <!-- info -->
     <section id="info-section" class="info-section">
 
-      <div class="row row-width">
-
-          <div class="col-lg-6">
-            <div class="card">
-              <img src="..." class="card-img-top" alt="...">
+      <div class="row row-dimension d-flex">
+          <div class="col-lg-6 align-self-center">
+            <div class="card info-card">
+                <img src="./assets/images/school.svg" class="card-img-top" alt="...">
               <div class="card-body">
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <h2 class="center-text">De Opleiding</h2>
+                <p class="card-text">De opleiding wordt georganiseerd door VDAB in samenwerking met Obelisk en MultiMedi met het doel de cursisten om te scholen tot junior mobiele applicatie ontwikkelaars. Motivatie speelt hier dan ook een heel grote rol. Alle cursisten werden vooraf gescreend, getest en bevraagd naar hun motivatie. Uit het ruime aanbod van meer dan 100 kandidaten zijn de bovenstaande cursisten geselecteerd.</p>
               </div>
             </div>
           </div>
 
-          <div class="col-lg-6">
-            <div class="card">
+          <div class="col-lg-6 align-self-center">
+            <div class="card info-card">
               <img src="..." class="card-img-top" alt="...">
               <div class="card-body">
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -58,7 +58,6 @@
             </div>
           </div>
         </div>
-
       </div>
 
     </section>
