--- a/index.html
+++ b/index.html
@@ -23,15 +23,12 @@
           <hr/>
           <h3 class="card-text center-text">Digitale Jobdag</h3>
           <hr/>
-          <h5 class="card-text center-text">.NET Developers</>
+          <h5 class="card-text center-text">.NET Developers</h5>
         </div>
       </div>
       <div class="justify-content-center d-flex">
-        <a href="#info-section">
-        <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="rgba(34, 30, 31, 0.65)" class="bi bi-eject" viewBox="0 0 16 16" transform="rotate(180) translate(0 50)">
-          <path d="M7.27 1.047a1 1 0 0 1 1.46 0l6.345 6.77c.6.638.146 1.683-.73 1.683H1.656C.78 9.5.326 8.455.926 7.816L7.27 1.047zM14.346 8.5L8 1.731 1.654 8.5h12.692zM.5 11.5a1 1 0 0 1 1-1h13a1 1 0 0 1 1 1v1a1 1 0 0 1-1 1h-13a1 1 0 0 1-1-1v-1zm14 0h-13v1h13v-1z"/>
-        </svg>
-        </a>
+        <a href="#info-section"> 
+<img src="./assets/images/arrow.svg" class="img-arrow" alt="Down-Arrow"/>        </a>
       </div>
     </header>
 
@@ -49,15 +46,86 @@
             </div>
           </div>
 
-          <div class="col-lg-6 align-self-center">
-            <div class="card info-card">
-              <img src="..." class="card-img-top" alt="...">
-              <div class="card-body">
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+         
+            <div class="col-lg-6 align-self-center">
+              <div class="card info-card">
+                  <img src="./assets/images/code.svg" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h2 class="center-text">Leerprogramma</h2>
+                  <p class="card-text">We leerden c#, HTML, blablabla ... king met Obelisk en MultiMrganiseerd door VDAB in samenweredi met het doel de cursisten om te scholen tot junior mobiele applicatie ontwikkelaars. Motivatie speelt hier dan ook een heel grote rol. Alle cursisten werden vooraf gescreend, getest en bevraagd naar hun motivatie. Uit het ruime aanbod van meer dan 100 kandidaten zijn de bovenstaande cursisten geselecteerd.</p>
+                </div>
               </div>
+            </div> 
+
+        </div>
+      </div>
+
+    </section>
+    <section id="info-section" class="info-section">
+
+      <div class="row row-dimension d-flex">
+        
+        <div class="col-md-6 col-lg-3 align-self-center">
+          <div class="card info-card">
+              <img src="./assets/images/Ward_Impe.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h2 class="center-text">De Ward</h2>
+              <p class="card-text">De opleiding wordt n tot junior mMotivatie speelt hier dan ook een heel grote rol. Alle cursisten werden vooraf gescreend, getest en bevraagd naar hun motivatie. Uit het ruime aanbod van meer dan 100 kandidaten zijn de bovenstaande cursisten geselecteerd.</p>
             </div>
           </div>
         </div>
+
+        <div class="col-md-6 col-lg-3 align-self-center">
+          <div class="card info-card">
+              <img src="./assets/images/Ward_Impe.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h2 class="center-text">De Ward</h2>
+              <p class="card-text">De opleiding wordt n tot junior mMotivatie speelt hier dan ook een heel grote rol. Alle cursisten werden vooraf gescreend, getest en bevraagd naar hun motivatie. Uit het ruime aanbod van meer dan 100 kandidaten zijn de bovenstaande cursisten geselecteerd.</p>
+            </div>
+          </div>
+        </div>     <div class="col-md-6 col-lg-3 align-self-center">
+          <div class="card info-card">
+              <img src="./assets/images/Ward_Impe.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h2 class="center-text">De Ward</h2>
+              <p class="card-text">De opleiding wordt n tot junior mMotivatie speelt hier dan ook een heel grote rol. Alle cursisten werden vooraf gescreend, getest en bevraagd naar hun motivatie. Uit het ruime aanbod van meer dan 100 kandidaten zijn de bovenstaande cursisten geselecteerd.</p>
+            </div>
+          </div>
+        </div>     <div class="col-md-6 col-lg-3 align-self-center">
+          <div class="card info-card">
+              <img src="./assets/images/Ward_Impe.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h2 class="center-text">De Ward</h2>
+              <p class="card-text">De opleiding wordt n tot junior mMotivatie speelt hier dan ook een heel grote rol. Alle cursisten werden vooraf gescreend, getest en bevraagd naar hun motivatie. Uit het ruime aanbod van meer dan 100 kandidaten zijn de bovenstaande cursisten geselecteerd.</p>
+            </div>
+          </div>
+        </div>     <div class="col-md-6 col-lg-3 align-self-center">
+          <div class="card info-card">
+              <img src="./assets/images/Ward_Impe.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h2 class="center-text">De Ward</h2>
+              <p class="card-text">De opleiding wordt n tot junior mMotivatie speelt hier dan ook een heel grote rol. Alle cursisten werden vooraf gescreend, getest en bevraagd naar hun motivatie. Uit het ruime aanbod van meer dan 100 kandidaten zijn de bovenstaande cursisten geselecteerd.</p>
+            </div>
+          </div>
+        </div>     <div class="col-md-6 col-lg-3 align-self-center">
+          <div class="card info-card">
+              <img src="./assets/images/Ward_Impe.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h2 class="center-text">De Ward</h2>
+              <p class="card-text">De opleiding wordt n tot junior mMotivatie speelt hier dan ook een heel grote rol. Alle cursisten werden vooraf gescreend, getest en bevraagd naar hun motivatie. Uit het ruime aanbod van meer dan 100 kandidaten zijn de bovenstaande cursisten geselecteerd.</p>
+            </div>
+          </div>
+        </div>     <div class="col-md-6 col-lg-3 align-self-center">
+          <div class="card info-card">
+              <img src="./assets/images/Ward_Impe.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h2 class="center-text">De Ward</h2>
+              <p class="card-text">De opleiding wordt n tot junior mMotivatie speelt hier dan ook een heel grote rol. Alle cursisten werden vooraf gescreend, getest en bevraagd naar hun motivatie. Uit het ruime aanbod van meer dan 100 kandidaten zijn de bovenstaande cursisten geselecteerd.</p>
+            </div>
+          </div>
+        </div>
+
+
       </div>
 
     </section>
