--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
   <!-- students section -->
   <section id="student-section">
     <div class="container-fluid">
-      <div class="row row-dimension">
+      <div class="row row-dimension justify-content-start">
 
         <!-- START Andreas -->
         <div class="col-md-6 col-xl-4  col-xxl-3 align-self-center ">
