--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                     
                     <h2 class="center-text">Andreas</h2>
                     <img class="turn" src="./assets/images/FlipCard.png" />
-                    <p class="card-text">De opleiding wordt n tot junior mMotivatie speelt hier dan ook een heel grote
+                    <p class="student-text">De opleiding wordt n tot junior mMotivatie speelt hier dan ook een heel grote
                       rol. Alle
                       cursisten werden vooraf gescreend, getest en bevraagd naar hun motivatie. Uit het ruime aanbod van
                       meer
@@ -108,6 +108,7 @@
               <div class="card__face card__face--back">
                 <div class="student-card rounded-border boxshadow ">
                   <img src="./assets/images/Andreas.jpg" class="student-img" alt="...">
+                  <img class="turnb" src="./assets/images/FlipCardb.png" />
                   <div class="card-body">
                     <h2 class="center-text">Andreas</h2>
                     <div class="social-wrap">
@@ -135,7 +136,7 @@
                     <h2 class="center-text">Diederik</h2>
                     <img class="turn" src="./assets/images/FlipCard.png" />
 
-                    <p class="card-text">De opleiding wordt n tot junior mMotivatie speelt hier dan ook een heel grote
+                    <p class="student-text">De opleiding wordt n tot junior mMotivatie speelt hier dan ook een heel grote
                       rol. Alle
                       cursisten werden vooraf gescreend, getest en bevraagd naar hun motivatie. Uit het ruime aanbod van
                       meer
@@ -173,7 +174,7 @@
                     <h2 class="center-text">Dries Maes</h2>
                     <img class="turn" src="./assets/images/FlipCard.png" />
 
-                    <p class="card-text">De opleiding wordt n tot junior mMotivatie speelt hier dan ook een heel grote
+                    <p class="student-text">De opleiding wordt n tot junior mMotivatie speelt hier dan ook een heel grote
                       rol. Alle
                       cursisten werden vooraf gescreend, getest en bevraagd naar hun motivatie. Uit het ruime aanbod van
                       meer
@@ -212,7 +213,7 @@
                     <h2 class="center-text">Emma Danckaert</h2>
                     <img class="turn" src="./assets/images/FlipCard.png" />
 
-                    <p class="card-text">De opleiding wordt n tot junior mMotivatie speelt hier dan ook een heel grote
+                    <p class="student-text">De opleiding wordt n tot junior mMotivatie speelt hier dan ook een heel grote
                       rol. Alle
                       cursisten werden vooraf gescreend, getest en bevraagd naar hun motivatie. Uit het ruime aanbod van
                       meer
@@ -252,7 +253,7 @@
                     <h2 class="center-text">Hoon Meskens</h2>
                     <img class="turn" src="./assets/images/FlipCard.png" />
 
-                    <p class="card-text">De opleiding wordt n tot junior mMotivatie speelt hier dan ook een heel grote
+                    <p class="student-text">De opleiding wordt n tot junior mMotivatie speelt hier dan ook een heel grote
                       rol. Alle
                       cursisten werden vooraf gescreend, getest en bevraagd naar hun motivatie. Uit het ruime aanbod van
                       meer
@@ -291,7 +292,7 @@
                     <h2 class="center-text">Jens</h2>
                     <img class="turn" src="./assets/images/FlipCard.png" />
 
-                    <p class="card-text">De opleiding wordt n tot junior mMotivatie speelt hier dan ook een heel grote
+                    <p class="student-text">De opleiding wordt n tot junior mMotivatie speelt hier dan ook een heel grote
                       rol. Alle
                       cursisten werden vooraf gescreend, getest en bevraagd naar hun motivatie. Uit het ruime aanbod van
                       meer
@@ -330,7 +331,7 @@
                     <h2 class="center-text">Joyce</h2>
                     <img class="turn" src="./assets/images/FlipCard.png" />
 
-                    <p class="card-text">De opleiding wordt n tot junior mMotivatie speelt hier dan ook een heel grote
+                    <p class="student-text">De opleiding wordt n tot junior mMotivatie speelt hier dan ook een heel grote
                       rol. Alle
                       cursisten werden vooraf gescreend, getest en bevraagd naar hun motivatie. Uit het ruime aanbod van
                       meer
@@ -369,7 +370,7 @@
                     <h2 class="center-text">Kobe Delobelle</h2>
                     <img class="turn" src="./assets/images/FlipCard.png" />
 
-                    <p class="card-text">De opleiding wordt n tot junior mMotivatie speelt hier dan ook een heel grote
+                    <p class="student-text">De opleiding wordt n tot junior mMotivatie speelt hier dan ook een heel grote
                       rol. Alle
                       cursisten werden vooraf gescreend, getest en bevraagd naar hun motivatie. Uit het ruime aanbod van
                       meer
@@ -380,6 +381,7 @@
               </div>
               <div class="card__face card__face--back">
                 <div class="student-card rounded-border boxshadow ">
+                  <img src="./assets/images/avatars/No-Avatar.png" class="student-img" alt="...">
                   <div class="card-body">
                     <h2 class="center-text">Kobe Delobelle</h2>
                     <div class="social-wrap">
@@ -406,7 +408,7 @@
                     <h2 class="center-text">Nick Van Royen</h2>
                     <img class="turn" src="./assets/images/FlipCard.png" />
 
-                    <p class="card-text">Ik ben Nick, 33 jaar uit Belsele. Op weg om een gedreven software ontwikkelaar
+                    <p class="student-text">Ik ben Nick, 33 jaar uit Belsele. Op weg om een gedreven software ontwikkelaar
                       te worden. Na jaren zoeken naar een echte roeping, geloof ik die eindelijk gevonden te hebben.
                       Mijn huidige vaardigheden omvatten JavaScript en basiskennis van C# en ik werk er hard aan om deze
                       uit te breiden. Ik kijk er naar uit om mijn vaardigheden in praktijk om te zetten.</p>
@@ -444,7 +446,7 @@
                     <h2 class="center-text">Pieter</h2>
                     <img class="turn" src="./assets/images/FlipCard.png" />
 
-                    <p class="card-text">De opleiding wordt n tot junior mMotivatie speelt hier dan ook een heel grote
+                    <p class="student-text">De opleiding wordt n tot junior mMotivatie speelt hier dan ook een heel grote
                       rol. Alle
                       cursisten werden vooraf gescreend, getest en bevraagd naar hun motivatie. Uit het ruime aanbod van
                       meer
@@ -483,7 +485,7 @@
                     <h2 class="center-text">Sebastiaan-Willem Kesteloot</h2>
                     <img class="turn" src="./assets/images/FlipCard.png" />
 
-                    <p class="card-text">Hallo! Mijn naam is Sebastiaan-Willem en zoals vele anderen ben ik op zoek naar
+                    <p class="student-text">Hallo! Mijn naam is Sebastiaan-Willem en zoals vele anderen ben ik op zoek naar
                       werk.
                       Buiten mijn steeds groeiende kennis van informatica en technische vaardigheden
                       ben ik leergierig, praktisch, communicatief, rationeel ingesteld en hou mezelf graag
@@ -522,7 +524,7 @@
                     <h2 class="center-text">Simon Van Tittelboom</h2>
                     <img class="turn" src="./assets/images/FlipCard.png" />
 
-                    <p class="card-text">De opleiding wordt n tot junior mMotivatie speelt hier dan ook een heel grote
+                    <p class="student-text">De opleiding wordt n tot junior mMotivatie speelt hier dan ook een heel grote
                       rol. Alle
                       cursisten werden vooraf gescreend, getest en bevraagd naar hun motivatie. Uit het ruime aanbod van
                       meer
@@ -561,7 +563,7 @@
                     <h2 class="center-text">Ward Impe</h2>
                     <img class="turn" src="./assets/images/FlipCard.png" />
 
-                    <p class="card-text">Hallo, ik ben Ward, 46 jaar, en ouder van een prachtige dochter van 5.
+                    <p class="student-text">Hallo, ik ben Ward, 46 jaar, en ouder van een prachtige dochter van 5.
                       Ik werkte laatste 20j fulltime als DJ waar ik mijn people skills kon ontwikkelen; diplomatisch,
                       sociaal, maar ook voldoende assertief.
                       Ook ben ik al sinds 1999 beta tester. Dus testing en troubleshooting zitten me al behoorlijk in de
@@ -603,7 +605,7 @@
                     <h2 class="center-text">Michiel Wouters</h2>
                     <img class="turn" src="./assets/images/FlipCard.png" />
 
-                    <p class="card-text">Lorem ipsum dolor sit amet sit veroeros sed et blandit consequat sed veroeros
+                    <p class="student-text">Lorem ipsum dolor sit amet sit veroeros sed et blandit consequat sed veroeros
                       lorem et blandit adipiscing feugiat phasellus tempus hendrerit, tortor vitae mattis tempor, sapien
                       sem feugiat sapien, id suscipit magna felis nec elit. Class aptent taciti sociosqu ad litora
                       torquent per conubia nostra, per inceptos lorem ipsum dolor sit amet.</p>
@@ -642,7 +644,7 @@
                     <h2 class="center-text">Marieke Verhulsdonck</h2>
                     <img class="turn" src="./assets/images/FlipCard.png" />
 
-                    <p class="card-text">Als trajectbegeleider is het mijn taak via sollicitatietrainingen en
+                    <p class="student-text">Als trajectbegeleider is het mijn taak via sollicitatietrainingen en
                       individuele en collectieve trajectbegeleidingsmomenten de toekomstige .net developers te coachen
                       naar een duurzame tewerkstelling. Ik bereid de cursisten zo goed mogelijk voor op de arbeidsmarkt
                       door te focussen op zelfredzaamheid, een open feedbackcultuur en communicatie in het algemeen.</p>
