arrow both sides

--- a/index.html
+++ b/index.html
@@ -151,8 +151,8 @@
               <div class="card__face card__face--back">
                 <div class="student-card rounded-border boxshadow ">
                   <img src="./assets/images/Diederick.jpg" class="student-img" alt="...">
-                  <div class="card-body">
-                    <h2 class="center-text">Diederik</h2>
+                  <img class="turnb" src="./assets/images/FlipCardb.png" />
+                  <div class="card-body">Diederik</h2>
                     <div class="social-wrap">
                       <img src="./assets/images/linkedin.svg" alt="linkedin" class="social-icons">
                       <img src="./assets/images/github.svg" alt="github" class="social-icons">
@@ -191,8 +191,8 @@
               <div class="card__face card__face--back">
                 <div class="student-card rounded-border boxshadow ">
                   <img src="./assets/images/Dries.jpg" class="student-img" alt="...">
-                  <div class="card-body">
-                    <h2 class="center-text">Dries Maes</h2>
+                  <img class="turnb" src="./assets/images/FlipCardb.png" />
+                  <div class="card-body">Dries Maes</h2>
                     <div class="social-wrap">
                       <img src="./assets/images/linkedin.svg" alt="linkedin" class="social-icons">
                       <img src="./assets/images/github.svg" alt="github" class="social-icons">
@@ -232,8 +232,8 @@
                 <div class="student-card rounded-border boxshadow ">
                   <img class="turn" c="./assets/images/turn.svg" />
                   <img src="./assets/images/Emma.jpg" class="student-img" alt="...">
-                  <div class="card-body">
-                    <h2 class="center-text">Emma Danckaert</h2>
+                  <img class="turnb" src="./assets/images/FlipCardb.png" />
+                  <div class="card-body">Emma Danckaert</h2>
                     <div class="social-wrap">
                       <img src="./assets/images/linkedin.svg" alt="linkedin" class="social-icons">
                       <img src="./assets/images/github.svg" alt="github" class="social-icons">
@@ -272,8 +272,8 @@
               <div class="card__face card__face--back">
                 <div class="student-card rounded-border boxshadow ">
                   <img src="./assets/images/avatars/No-Avatar.png" class="student-img" alt="...">
-                  <div class="card-body">
-                    <h2 class="center-text">Hoon Meskens</h2>
+                  <img class="turnb" src="./assets/images/FlipCardb.png" />
+                  <div class="card-body">Hoon Meskens</h2>
                     <div class="social-wrap">
                       <img src="./assets/images/linkedin.svg" alt="linkedin" class="social-icons">
                       <img src="./assets/images/github.svg" alt="github" class="social-icons">
@@ -312,8 +312,8 @@
               <div class="card__face card__face--back">
                 <div class="student-card rounded-border boxshadow ">
                   <img src="./assets/images/Jens.jpg" class="student-img" alt="...">
-                  <div class="card-body">
-                    <h2 class="center-text">Jens</h2>
+                  <img class="turnb" src="./assets/images/FlipCardb.png" />
+                  <div class="card-body">Jens</h2>
                     <div class="social-wrap">
                       <img src="./assets/images/linkedin.svg" alt="linkedin" class="social-icons">
                       <img src="./assets/images/github.svg" alt="github" class="social-icons">
@@ -352,8 +352,8 @@
               <div class="card__face card__face--back">
                 <div class="student-card rounded-border boxshadow ">
                   <img src="./assets/images/Joyce.jpg" class="student-img" alt="...">
-                  <div class="card-body">
-                    <h2 class="center-text">Joyce</h2>
+                  <img class="turnb" src="./assets/images/FlipCardb.png" />
+                  <div class="card-body">Joyce</h2>
                     <div class="social-wrap">
                       <img src="./assets/images/linkedin.svg" alt="linkedin" class="social-icons">
                       <img src="./assets/images/github.svg" alt="github" class="social-icons">
@@ -392,8 +392,8 @@
               <div class="card__face card__face--back">
                 <div class="student-card rounded-border boxshadow ">
                   <img src="./assets/images/avatars/No-Avatar.png" class="student-img" alt="...">
-                  <div class="card-body">
-                    <h2 class="center-text">Kobe Delobelle</h2>
+                  <img class="turnb" src="./assets/images/FlipCardb.png" />
+                  <div class="card-body">Kobe Delobelle</h2>
                     <div class="social-wrap">
                       <img src="./assets/images/linkedin.svg" alt="linkedin" class="social-icons">
                       <img src="./assets/images/github.svg" alt="github" class="social-icons">
@@ -431,8 +431,8 @@
                 <div class="student-card rounded-border boxshadow ">
                   <img src="./assets/images/Nick.jpg" class="student-img" alt="...">
 
-                  <div class="card-body">
-                    <h2 class="center-text">Nick Van Royen</h2>
+                  <img class="turnb" src="./assets/images/FlipCardb.png" />
+                  <div class="card-body">Nick Van Royen</h2>
                     <div class="social-wrap">
                       <img src="./assets/images/linkedin.svg" alt="linkedin" class="social-icons">
                       <img src="./assets/images/github.svg" alt="github" class="social-icons">
@@ -470,8 +470,8 @@
               <div class="card__face card__face--back">
                 <div class="student-card rounded-border boxshadow ">
                   <img src="./assets/images/Pieter.jpg" class="student-img" alt="...">
-                  <div class="card-body">
-                    <h2 class="center-text">Pieter</h2>
+                  <img class="turnb" src="./assets/images/FlipCardb.png" />
+                  <div class="card-body">Pieter</h2>
                     <div class="social-wrap">
                       <img src="./assets/images/linkedin.svg" alt="linkedin" class="social-icons">
                       <img src="./assets/images/github.svg" alt="github" class="social-icons">
@@ -510,8 +510,8 @@
               <div class="card__face card__face--back">
                 <div class="student-card rounded-border boxshadow ">
                   <img src="./assets/images/Seba.jpg" class="student-img" alt="...">
-                  <div class="card-body">
-                    <h2 class="center-text">Sebastiaan</h2>
+                  <img class="turnb" src="./assets/images/FlipCardb.png" />
+                  <div class="card-body">Sebastiaan</h2>
                     <div class="social-wrap">
                       <img src="./assets/images/linkedin.svg" alt="linkedin" class="social-icons">
                       <img src="./assets/images/github.svg" alt="github" class="social-icons">
@@ -550,8 +550,8 @@
               <div class="card__face card__face--back">
                 <div class="student-card rounded-border boxshadow ">
                   <img src="./assets/images/Simon.jpg" class="student-img" alt="...">
-                  <div class="card-body">
-                    <h2 class="center-text">Simon Van Tittelboom</h2>
+                  <img class="turnb" src="./assets/images/FlipCardb.png" />
+                  <div class="card-body">Simon Van Tittelboom</h2>
                     <div class="social-wrap">
                       <img src="./assets/images/linkedin.svg" alt="linkedin" class="social-icons">
                       <img src="./assets/images/github.svg" alt="github" class="social-icons">
@@ -589,8 +589,8 @@
               <div class="card__face card__face--back">
                 <div class="student-card rounded-border boxshadow ">
                   <img src="./assets/images/Ward_Impe.jpg" class="student-img" alt="...">
-                  <div class="card-body">
-                    <h2 class="center-text">Ward Impe</h2>
+                  <img class="turnb" src="./assets/images/FlipCardb.png" />
+                  <div class="card-body">Ward Impe</h2>
                     <div class="social-wrap">
                       <a target="_blank" href="https://www.linkedin.com/in/ward-impe/"><img
                           src="./assets/images/linkedin.svg" alt="linkedin" class="social-icons"></a>
@@ -630,8 +630,8 @@
               <div class="card__face card__face--back">
                 <div class="student-card rounded-border boxshadow ">
                   <img src="./assets/images/Michiel.jpg" class="student-img" alt="...">
-                  <div class="card-body">
-                    <h2 class="center-text">Michiel Wouters</h2>
+                  <img class="turnb" src="./assets/images/FlipCardb.png" />
+                  <div class="card-body">Michiel Wouters</h2>
                     <div class="social-wrap">
                       <a target="_blank" href="https://www.linkedin.com/in/ward-impe/"><img
                           src="./assets/images/linkedin.svg" alt="linkedin" class="social-icons"></a>
@@ -670,8 +670,8 @@
               <div class="card__face card__face--back">
                 <div class="student-card rounded-border boxshadow ">
                   <img src="./assets/images/Marieke.jpg" class="student-img" alt="...">
-                  <div class="card-body">
-                    <h2 class="center-text">Marieke Verhulsdonck</h2>
+                  <img class="turnb" src="./assets/images/FlipCardb.png" />
+                  <div class="card-body">Marieke Verhulsdonck</h2>
                     <div class="social-wrap">
                       <a target="_blank" href="https://www.linkedin.com/in/ward-impe/"><img
                           src="./assets/images/linkedin.svg" alt="linkedin" class="social-icons"></a>
