--- a/index.html
+++ b/index.html
@@ -111,8 +111,8 @@
               <div class="card__face card__face--back">
                 <div class="student-card rounded-border boxshadow ">
                   <img class="turnb" src="./assets/images/FlipCardb.png" />
+                  <img src="./assets/images/Andreas.jpg" class="student-img" alt="...">
                   <div class="card-body">
-                    <img src="./assets/images/Andreas.jpg" class="student-img" alt="...">
                     <h2 class="center-text">Andreas</h2>
                     <div class="social-wrap">
                       <img src="./assets/images/linkedin.svg" alt="linkedin" class="social-icons">
@@ -152,7 +152,8 @@
                 <div class="student-card rounded-border boxshadow ">
                   <img class="turnb" src="./assets/images/FlipCardb.png" />
                   <img src="./assets/images/Diederick.jpg" class="student-img" alt="...">
-                  <div class="card-body">Diederik</h2>
+                  <div class="card-body">
+                    <h2 class="center-text">Diederik</h2>
                     <div class="social-wrap">
                       <img src="./assets/images/linkedin.svg" alt="linkedin" class="social-icons">
                       <img src="./assets/images/github.svg" alt="github" class="social-icons">
@@ -191,7 +192,7 @@
                 <div class="student-card rounded-border boxshadow ">
                   <img class="turnb" src="./assets/images/FlipCardb.png" />
                   <img src="./assets/images/Dries.jpg" class="student-img" alt="...">
-                  <div class="card-body">Dries Maes</h2>
+                  <div class="card-body"><h2 class="center-text">Dries Maes</h2>
                     <div class="social-wrap">
                       <img src="./assets/images/linkedin.svg" alt="linkedin" class="social-icons">
                       <img src="./assets/images/github.svg" alt="github" class="social-icons">
@@ -231,7 +232,7 @@
                 <div class="student-card rounded-border boxshadow ">
                   <img class="turnb" src="./assets/images/FlipCardb.png" />
                   <img src="./assets/images/Emma.jpg" class="student-img" alt="...">
-                  <div class="card-body">Emma Danckaert</h2>
+                  <div class="card-body"><h2 class="center-text">Emma Danckaert</h2>
                     <div class="social-wrap">
                       <img src="./assets/images/linkedin.svg" alt="linkedin" class="social-icons">
                       <img src="./assets/images/github.svg" alt="github" class="social-icons">
@@ -257,12 +258,7 @@
                   <div class="card-body">
                     <h2 class="center-text">Hoon Meskens</h2>
 
-                    <p class="student-text">De opleiding wordt n tot junior mMotivatie speelt hier dan ook een heel
-                      grote
-                      rol. Alle
-                      cursisten werden vooraf gescreend, getest en bevraagd naar hun motivatie. Uit het ruime aanbod van
-                      meer
-                      dan 100 kandidaten zijn de bovenstaande cursisten geselecteerd.</p>
+                    <p class="student-text">Mijn naam is Hoon. Op mijn 22e heb ik mijn studies handelsingenieur moeten stopzetten. Ik zou deze kans willen aangrijpen om alsnog mijn verstandelijke capaciteiten aan te wenden en mezelf navenant te ontplooien. Ik ben in staat om snel en veel te leren en beschik over een sterk wiskundig brein en analytisch inzicht.</p>
 
                   </div>
                 </div>
@@ -271,7 +267,7 @@
                 <div class="student-card rounded-border boxshadow ">
                   <img class="turnb" src="./assets/images/FlipCardb.png" />
                   <img src="./assets/images/avatars/No-Avatar.png" class="student-img" alt="...">
-                  <div class="card-body">Hoon Meskens</h2>
+                  <div class="card-body"><h2 class="center-text">Hoon Meskens</h2>
                     <div class="social-wrap">
                       <img src="./assets/images/linkedin.svg" alt="linkedin" class="social-icons">
                       <img src="./assets/images/github.svg" alt="github" class="social-icons">
@@ -311,7 +307,7 @@
                 <div class="student-card rounded-border boxshadow ">
                   <img class="turnb" src="./assets/images/FlipCardb.png" />
                   <img src="./assets/images/Jens.jpg" class="student-img" alt="...">
-                  <div class="card-body">Jens</h2>
+                  <div class="card-body"><h2 class="center-text">Jens</h2>
                     <div class="social-wrap">
                       <img src="./assets/images/linkedin.svg" alt="linkedin" class="social-icons">
                       <img src="./assets/images/github.svg" alt="github" class="social-icons">
@@ -351,7 +347,7 @@
                 <div class="student-card rounded-border boxshadow ">
                   <img class="turnb" src="./assets/images/FlipCardb.png" />
                   <img src="./assets/images/Joyce.jpg" class="student-img" alt="...">
-                  <div class="card-body">Joyce</h2>
+                  <div class="card-body"><h2 class="center-text">Joyce</h2>
                     <div class="social-wrap">
                       <img src="./assets/images/linkedin.svg" alt="linkedin" class="social-icons">
                       <img src="./assets/images/github.svg" alt="github" class="social-icons">
@@ -391,7 +387,7 @@
                 <div class="student-card rounded-border boxshadow ">
                   <img class="turnb" src="./assets/images/FlipCardb.png" />
                   <img src="./assets/images/avatars/No-Avatar.png" class="student-img" alt="...">
-                  <div class="card-body">Kobe Delobelle</h2>
+                  <div class="card-body"><h2 class="center-text">Kobe Delobelle</h2>
                     <div class="social-wrap">
                       <img src="./assets/images/linkedin.svg" alt="linkedin" class="social-icons">
                       <img src="./assets/images/github.svg" alt="github" class="social-icons">
@@ -430,7 +426,7 @@
                   <img class="turnb" src="./assets/images/FlipCardb.png" />
                   <img src="./assets/images/Nick.jpg" class="student-img" alt="...">
 
-                  <div class="card-body">Nick Van Royen</h2>
+                  <div class="card-body"><h2 class="center-text">Nick Van Royen</h2>
                     <div class="social-wrap">
                       <img src="./assets/images/linkedin.svg" alt="linkedin" class="social-icons">
                       <img src="./assets/images/github.svg" alt="github" class="social-icons">
@@ -469,7 +465,7 @@
                 <div class="student-card rounded-border boxshadow ">
                   <img class="turnb" src="./assets/images/FlipCardb.png" />
                   <img src="./assets/images/Pieter.jpg" class="student-img" alt="...">
-                  <div class="card-body">Pieter</h2>
+                  <div class="card-body"><h2 class="center-text">Pieter</h2>
                     <div class="social-wrap">
                       <img src="./assets/images/linkedin.svg" alt="linkedin" class="social-icons">
                       <img src="./assets/images/github.svg" alt="github" class="social-icons">
@@ -509,7 +505,7 @@
                 <div class="student-card rounded-border boxshadow ">
                   <img class="turnb" src="./assets/images/FlipCardb.png" />
                   <img src="./assets/images/Seba.jpg" class="student-img" alt="...">
-                  <div class="card-body">Sebastiaan</h2>
+                  <div class="card-body"><h2 class="center-text">Sebastiaan</h2>
                     <div class="social-wrap">
                       <img src="./assets/images/linkedin.svg" alt="linkedin" class="social-icons">
                       <img src="./assets/images/github.svg" alt="github" class="social-icons">
@@ -549,7 +545,7 @@
                 <div class="student-card rounded-border boxshadow ">
                   <img class="turnb" src="./assets/images/FlipCardb.png" />
                   <img src="./assets/images/Simon.jpg" class="student-img" alt="...">
-                  <div class="card-body">Simon Van Tittelboom</h2>
+                  <div class="card-body"><h2 class="center-text">Simon Van Tittelboom</h2>
                     <div class="social-wrap">
                       <img src="./assets/images/linkedin.svg" alt="linkedin" class="social-icons">
                       <img src="./assets/images/github.svg" alt="github" class="social-icons">
@@ -579,7 +575,7 @@
                       Ik werkte laatste 20j fulltime als DJ waar ik mijn people skills kon ontwikkelen; diplomatisch,
                       sociaal, maar ook voldoende assertief.
                       Ook ben ik al sinds 1999 beta tester. Dus testing en troubleshooting zitten me al behoorlijk in de
-                      vingers. Ook de benodigde denk-logica en analytische skills hiervoor maakte ik me eigen.</p>
+                      vingers. Logica en analytische skills maakte ik me eigen.</p>
                   </div>
 
                 </div>
@@ -588,7 +584,7 @@
                 <div class="student-card rounded-border boxshadow ">
                   <img class="turnb" src="./assets/images/FlipCardb.png" />
                   <img src="./assets/images/Ward_Impe.jpg" class="student-img" alt="...">
-                  <div class="card-body">Ward Impe</h2>
+                  <div class="card-body"><h2 class="center-text"></h2>Ward Impe</h2>
                     <div class="social-wrap">
                       <a target="_blank" href="https://www.linkedin.com/in/ward-impe/"><img
                           src="./assets/images/linkedin.svg" alt="linkedin" class="social-icons"></a>
