no rounded lines

--- a/index.html
+++ b/index.html
@@ -686,6 +686,10 @@
       </div>
     </div>
   </section>
+
+  <footer>
+    
+  </footer>
   <script>
     let cards = document.querySelectorAll('.card');
     // });
