--- a/index.html
+++ b/index.html
@@ -389,7 +389,7 @@
                   <img class="turnb" src="./assets/images/FlipCardb.png" />
                   <img src="./assets/images/avatars/No-Avatar.png" class="student-img" alt="...">
                   <div class="card-body"><h2 class="center-text">Kobe Delobelle</h2>
-                    <div class="social-wrap">
+                    <div class="student-text social-wrap">
                       <img src="./assets/images/linkedin.svg" alt="linkedin" class="social-icons">
                       <img src="./assets/images/github.svg" alt="github" class="social-icons">
                       <img src="./assets/images/globe.svg" alt="linkedin" class="social-icons">
@@ -571,7 +571,7 @@
                   
                   <div class="card-body">
                     
-                    <h2 class="center-text">Ward Impe</h2>
+                    <h2 class="center-text">Ward Stinkt</h2>
                     <p class="student-text">Hallo, ik ben Ward, 46 jaar, en ouder van een prachtige dochter van 5.
                       Ik werkte laatste 20j fulltime als DJ waar ik mijn people skills kon ontwikkelen; diplomatisch,
                       sociaal, maar ook voldoende assertief.
@@ -640,8 +640,8 @@
             </div>
           </div>
         </div>
-        <!-- END Ward -->
-        <!-- START Ward -->
+        <!-- END Michiel -->
+        <!-- START Marieke -->
         <div class="student">
           <div class="scene">
             <div class="card">
@@ -680,7 +680,7 @@
             </div>
           </div>
         </div>
-        <!-- END Ward -->
+        <!-- END Marieke -->
 
       </div>
     </div>
