Batton naar Seba (form toegevoed)

--- a/index.html
+++ b/index.html
@@ -34,14 +34,13 @@
 
 
   <!-- info -->
-  <article>
+  
     <section id="info-section" class="section-height">
       <div>
         <div class="info-container">
           <div class="info-card rounded-border boxshadow ">
             <img src="./assets/images/school.svg" class="card-img-top" alt="Afbeelding refererend naar de Opleiding">
             <div>
-              <h2 class="center-text">De Opleiding</h2>
               <p class="card-text">De opleiding wordt georganiseerd door VDAB in samenwerking met Obelisk en MultiMedi
                 met
                 het doel de cursisten om te scholen tot junior mobiele applicatie ontwikkelaars. Motivatie speelt hier
@@ -56,7 +55,6 @@
           <div class="info-card rounded-border boxshadow ">
             <img src="./assets/images/code.svg" class="card-img-top" alt="Afbeelding refererend naar het Leerprogramma">
             <div class="card-body">
-              <h2 class="center-text">Leerprogramma</h2>
               <p class="card-text">We leerden c#, HTML, blablabla ... king met Obelisk en MultiMrganiseerd door VDAB in
                 samenweredi met het doel de cursisten om te scholen tot junior mobiele applicatie ontwikkelaars.
                 Motivatie
@@ -73,7 +71,7 @@
           <img src="./assets/images/arrow.svg" class="img-arrow center" alt="Down-Arrow" /> </a>
       </div>
     </section>
-  </article>
+  
 
 
 
@@ -571,7 +569,7 @@
                   
                   <div class="card-body">
                     
-                    <h2 class="center-text">Ward Stinkt</h2>
+                    <h2 class="center-text">Ward Impe</h2>
                     <p class="student-text">Hallo, ik ben Ward, 46 jaar, en ouder van een prachtige dochter van 5.
                       Ik werkte laatste 20j fulltime als DJ waar ik mijn people skills kon ontwikkelen; diplomatisch,
                       sociaal, maar ook voldoende assertief.
@@ -685,6 +683,34 @@
       </div>
     </div>
   </section>
+<section class="form-height">
+  <div class="form-card rounded-border boxshadow center">
+  <form id="fs-frm" name="simple-contact-form" accept-charset="utf-8" action="https://formspree.io/f/mrgongkp" method="post">
+    <h1>Registeer je voor de jobdag</h1>
+    <fieldset id="fs-frm-inputs">
+      <div class="form-control">
+        <label for="company-name">Bedrijf</label>
+        <input type="text" name="company" id="company-name" placeholder="Naam van het bedrijf" required> 
+      </div>
+      <div class="form-control">
+      <label for="full-name">Naam</label>
+      <input type="text" name="name" id="full-name" placeholder="Voor en achternaam" required> 
+    </div>
+    <div class="form-control">
+      <label for="email-address">Email</label>
+      <input type="email" name="_replyto" id="email-address" placeholder="email@domain.tld" required>
+    </div>
+      <div class="form-control">
+      <label for="message">Bericht</label>
+      <textarea rows="5" name="message" id="message" placeholder="Schrijf hier uw bericht." required></textarea>
+    </div>
+    <input type="hidden" name="_subject" id="email-subject" value="Contact Form Submission">
+    </fieldset>
+
+    <input class="form-button" type="submit" value="Verzenden" disabled>
+  </form>
+</div>
+</section>
 
   <footer>
 
