--- a/index.html
+++ b/index.html
@@ -71,15 +71,6 @@
           <img src="./assets/images/arrow.svg" class="img-arrow center" alt="Down-Arrow" /> </a>
       </div>
     </section>
-  
-
-
-
-
-
-
-
-
 
 
   <!-- students section -->
@@ -113,7 +104,7 @@
                   <img src="./assets/images/Andreas.jpg" class="student-img" alt="...">
                   <div class="card-body">
                     <h2 class="center-text">Andreas</h2>
-                    <div class="social-wrap">
+                    <div class="student-text social-wrap">
                       <img src="./assets/images/linkedin.svg" alt="linkedin" class="social-icons">
                       <img src="./assets/images/github.svg" alt="github" class="social-icons">
                       <img src="./assets/images/globe.svg" alt="linkedin" class="social-icons">
@@ -153,7 +144,7 @@
                   <img src="./assets/images/Diederick.jpg" class="student-img" alt="...">
                   <div class="card-body">
                     <h2 class="center-text">Diederik</h2>
-                    <div class="social-wrap">
+                    <div class=" student-text social-wrap">
                       <img src="./assets/images/linkedin.svg" alt="linkedin" class="social-icons">
                       <img src="./assets/images/github.svg" alt="github" class="social-icons">
                       <img src="./assets/images/globe.svg" alt="linkedin" class="social-icons">
@@ -192,7 +183,7 @@
                   <img class="turnb" src="./assets/images/FlipCardb.png" />
                   <img src="./assets/images/Dries.jpg" class="student-img" alt="...">
                   <div class="card-body"><h2 class="center-text">Dries Maes</h2>
-                    <div class="social-wrap">
+                    <div class="student-text social-wrap">
                       <img src="./assets/images/linkedin.svg" alt="linkedin" class="social-icons">
                       <img src="./assets/images/github.svg" alt="github" class="social-icons">
                       <img src="./assets/images/globe.svg" alt="linkedin" class="social-icons">
@@ -232,7 +223,7 @@
                   <img class="turnb" src="./assets/images/FlipCardb.png" />
                   <img src="./assets/images/Emma.jpg" class="student-img" alt="...">
                   <div class="card-body"><h2 class="center-text">Emma Danckaert</h2>
-                    <div class="social-wrap">
+                    <div class="student-text social-wrap">
                       <img src="./assets/images/linkedin.svg" alt="linkedin" class="social-icons">
                       <img src="./assets/images/github.svg" alt="github" class="social-icons">
                       <img src="./assets/images/globe.svg" alt="linkedin" class="social-icons">
@@ -262,12 +253,12 @@
                   </div>
                 </div>
               </div>
-              <div class="card__face card__face--back">
+              <div class="card__face  card__face--back card-backface-color">
                 <div class="student-card rounded-border boxshadow ">
                   <img class="turnb" src="./assets/images/FlipCardb.png" />
                   <img src="./assets/images/avatars/No-Avatar.png" class="student-img" alt="...">
                   <div class="card-body"><h2 class="center-text">Hoon Meskens</h2>
-                    <div class="social-wrap">
+                    <div class="student-text social-wrap">
                       <img src="./assets/images/linkedin.svg" alt="linkedin" class="social-icons">
                       <img src="./assets/images/github.svg" alt="github" class="social-icons">
                       <img src="./assets/images/globe.svg" alt="linkedin" class="social-icons">
@@ -307,7 +298,7 @@
                   <img class="turnb" src="./assets/images/FlipCardb.png" />
                   <img src="./assets/images/Jens.jpg" class="student-img" alt="...">
                   <div class="card-body"><h2 class="center-text">Jens</h2>
-                    <div class="social-wrap">
+                    <div class=" student-text social-wrap">
                       <img src="./assets/images/linkedin.svg" alt="linkedin" class="social-icons">
                       <img src="./assets/images/github.svg" alt="github" class="social-icons">
                       <img src="./assets/images/globe.svg" alt="linkedin" class="social-icons">
@@ -347,7 +338,7 @@
                   <img class="turnb" src="./assets/images/FlipCardb.png" />
                   <img src="./assets/images/Joyce.jpg" class="student-img" alt="...">
                   <div class="card-body"><h2 class="center-text">Joyce</h2>
-                    <div class="social-wrap">
+                    <div class="student-text social-wrap">
                       <img src="./assets/images/linkedin.svg" alt="linkedin" class="social-icons">
                       <img src="./assets/images/github.svg" alt="github" class="social-icons">
                       <img src="./assets/images/globe.svg" alt="linkedin" class="social-icons">
@@ -426,7 +417,7 @@
                   <img src="./assets/images/Nick.jpg" class="student-img" alt="...">
 
                   <div class="card-body"><h2 class="center-text">Nick Van Royen</h2>
-                    <div class="social-wrap">
+                    <div class="student-text social-wrap">
                       <img src="./assets/images/linkedin.svg" alt="linkedin" class="social-icons">
                       <img src="./assets/images/github.svg" alt="github" class="social-icons">
                       <img src="./assets/images/globe.svg" alt="linkedin" class="social-icons">
@@ -465,7 +456,7 @@
                   <img class="turnb" src="./assets/images/FlipCardb.png" />
                   <img src="./assets/images/Pieter.jpg" class="student-img" alt="...">
                   <div class="card-body"><h2 class="center-text">Pieter</h2>
-                    <div class="social-wrap">
+                    <div class="student-text social-wrap">
                       <img src="./assets/images/linkedin.svg" alt="linkedin" class="social-icons">
                       <img src="./assets/images/github.svg" alt="github" class="social-icons">
                       <img src="./assets/images/globe.svg" alt="linkedin" class="social-icons">
@@ -505,7 +496,7 @@
                   <img class="turnb" src="./assets/images/FlipCardb.png" />
                   <img src="./assets/images/Seba.jpg" class="student-img" alt="...">
                   <div class="card-body"><h2 class="center-text">Sebastiaan</h2>
-                    <div class="social-wrap">
+                    <div class="student-text social-wrap">
                       <img src="./assets/images/linkedin.svg" alt="linkedin" class="social-icons">
                       <img src="./assets/images/github.svg" alt="github" class="social-icons">
                       <img src="./assets/images/globe.svg" alt="linkedin" class="social-icons">
@@ -545,7 +536,7 @@
                   <img class="turnb" src="./assets/images/FlipCardb.png" />
                   <img src="./assets/images/Simon.jpg" class="student-img" alt="...">
                   <div class="card-body"><h2 class="center-text">Simon Van Tittelboom</h2>
-                    <div class="social-wrap">
+                    <div class="student-text social-wrap">
                       <img src="./assets/images/linkedin.svg" alt="linkedin" class="social-icons">
                       <img src="./assets/images/github.svg" alt="github" class="social-icons">
                       <img src="./assets/images/globe.svg" alt="linkedin" class="social-icons">
@@ -583,7 +574,7 @@
                   <img class="turnb" src="./assets/images/FlipCardb.png" />
                   <img src="./assets/images/Ward_Impe.jpg" class="student-img" alt="...">
                   <div class="card-body"><h2 class="center-text">Ward Impe</h2>
-                    <div class="social-wrap">
+                    <div class="student-text social-wrap">
                       <a target="_blank" href="https://www.linkedin.com/in/ward-impe/"><img
                           src="./assets/images/linkedin.svg" alt="linkedin" class="social-icons"></a>
                       <a target="_blank" href="https://github.com/Impesoft"><img src="./assets/images/github.svg"
@@ -624,7 +615,7 @@
                   <img class="turnb" src="./assets/images/FlipCardb.png" />
                   <img src="./assets/images/Michiel.jpg" class="student-img" alt="...">
                   <div class="card-body"><h2 class="center-text">Michiel Wouters</h2>
-                    <div class="social-wrap">
+                    <div class="student-text social-wrap">
                       <a target="_blank" href="https://www.linkedin.com/in/ward-impe/"><img
                           src="./assets/images/linkedin.svg" alt="linkedin" class="social-icons"></a>
                       <a target="_blank" href="https://github.com/Impesoft"><img src="./assets/images/github.svg"
@@ -664,7 +655,7 @@
                   <img class="turnb" src="./assets/images/FlipCardb.png" />
                   <img src="./assets/images/Marieke.jpg" class="student-img" alt="...">
                   <div class="card-body"><h2 class="center-text">Marieke Verhulsdonck</h2>
-                    <div class="social-wrap">
+                    <div class="student-text social-wrap">
                       <a target="_blank" href="https://www.linkedin.com/in/ward-impe/"><img
                           src="./assets/images/linkedin.svg" alt="linkedin" class="social-icons"></a>
                       <a target="_blank" href="https://github.com/Impesoft"><img src="./assets/images/github.svg"
@@ -683,6 +674,9 @@
       </div>
     </div>
   </section>
+
+  <!-- contact form -->
+
 <section class="form-height">
   <div class="form-card rounded-border boxshadow center">
   <form id="fs-frm" name="simple-contact-form" accept-charset="utf-8" action="https://formspree.io/f/mrgongkp" method="post">
@@ -712,8 +706,15 @@
 </div>
 </section>
 
-  <footer>
+<!-- Footer -->
 
+  <footer>
+    <div class="footer-wrap">
+      <img src="assets/images/Logo-VDAB.png" alt="VDAB logo"/>
+      <img src="assets/images/ESF.png" alt="ESF logo"/>
+      <img src="assets/images/EU.png" alt="EU logo"/>
+      <img src="assets/images/Vlaanderen.png" alt="Vlaanderen logo"/>   
+  </div> 
   </footer>
   <script>
     let cards = document.querySelectorAll('.card');
