--- a/index.html
+++ b/index.html
@@ -129,12 +129,8 @@
                   <div class="card-body">
                     <h2 class="center-text">Diederik</h2>
 
-                    <p class="student-text">De opleiding wordt n tot junior mMotivatie speelt hier dan ook een heel
-                      grote
-                      rol. Alle
-                      cursisten werden vooraf gescreend, getest en bevraagd naar hun motivatie. Uit het ruime aanbod van
-                      meer
-                      dan 100 kandidaten zijn de bovenstaande cursisten geselecteerd.</p>
+                    <p class="student-text">Hallo, ik ben Diederik, 39 jaar en uit Destelbergen. Na 15 jaren als verzekeringsconsultant gewerkt te hebben, heb ik besloten om mijn droom te volgen. Digitalisering is de toekomst en ik ben enthousiast om daar deel van uit te maken. Ik ben communicatief, klantgericht en open-minded. Regelmatige bijscholing vind ik een must. Are you interested? Lets meet!
+                    </p>
                   </div>
                 </div>
               </div>
@@ -208,12 +204,11 @@
                   <div class="card-body">
                     <h2 class="center-text">Emma Danckaert</h2>
 
-                    <p class="student-text">De opleiding wordt n tot junior mMotivatie speelt hier dan ook een heel
-                      grote
-                      rol. Alle
-                      cursisten werden vooraf gescreend, getest en bevraagd naar hun motivatie. Uit het ruime aanbod van
-                      meer
-                      dan 100 kandidaten zijn de bovenstaande cursisten geselecteerd.</p>
+                    <p class="student-text">Hallo daar! 
+                      Ik ben Emma, een jongedame van 26 jaar.
+                      Ik ben ooit begonnen aan een opleiding toegepaste informtaica maar die heb ik jammer genoeg niet kunnen afwerken.
+                      Mijn grootste passie is altijd al informatica geweest, dus toen de kans zich voordeed heb ik deze meteen met 2 handen aangenomen.
+                      Nu kan ik met trots zeggen dat ik een junior C# developer ben! Hopelijk hoor ik snel iets van jullie!</p>
                   </div>
 
                 </div>
@@ -441,12 +436,7 @@
                   <div class="card-body">
                     <h2 class="center-text">Pieter</h2>
 
-                    <p class="student-text">De opleiding wordt n tot junior mMotivatie speelt hier dan ook een heel
-                      grote
-                      rol. Alle
-                      cursisten werden vooraf gescreend, getest en bevraagd naar hun motivatie. Uit het ruime aanbod van
-                      meer
-                      dan 100 kandidaten zijn de bovenstaande cursisten geselecteerd.</p>
+                    <p class="student-text">Ik ben Pieter, 32 jaar en gebeten door programmeren. En dat doet pijn.</p>
 
                   </div>
                 </div>
