--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
           <div class="info-card rounded-border boxshadow ">
             <img src="./assets/images/code.svg" class="card-img-top" alt="Afbeelding refererend naar het Leerprogramma">
             <div class="card-body">
-              <p class="card-text">We leerden c#, HTML, blablabla ... king met Obelisk en MultiMrganiseerd door VDAB in
+              <p class="card-text">We leerden C#, HTML, blablabla ... king met Obelisk en Multimedi rganiseerd door VDAB in
                 samenweredi met het doel de cursisten om te scholen tot junior mobiele applicatie ontwikkelaars.
                 Motivatie
                 speelt hier dan ook een heel grote rol. Alle cursisten werden vooraf gescreend, getest en bevraagd naar
@@ -358,12 +358,11 @@
                   <div class="card-body">
                     <h2 class="center-text">Kobe Delobelle</h2>
 
-                    <p class="student-text">De opleiding wordt n tot junior mMotivatie speelt hier dan ook een heel
-                      grote
-                      rol. Alle
-                      cursisten werden vooraf gescreend, getest en bevraagd naar hun motivatie. Uit het ruime aanbod van
-                      meer
-                      dan 100 kandidaten zijn de bovenstaande cursisten geselecteerd.</p>
+                    <p class="student-text">Hallo, mijn naam is Kobe.
+                      Ik ben gepassioneerd door alles wat met computers te maken heeft,
+                      actualiteit, politieke en maatschappelijke thema's en muziek; hogere graad cello.
+                      Nu ben ik gebeten door mijn opleiding C# .NET en
+                      kijk ik er naar uit om dit in praktijk om te zetten.</p>
                   </div>
 
                 </div>
