Jens picture added

--- a/index.html
+++ b/index.html
@@ -359,10 +359,10 @@
                     <h2 class="center-text">Kobe Delobelle</h2>
 
                     <p class="student-text">Hallo, mijn naam is Kobe.
-                      Ik ben gepassioneerd door alles wat met computers te maken heeft,
-                      actualiteit, politieke en maatschappelijke thema's en muziek; hogere graad cello.
-                      Nu ben ik gebeten door mijn opleiding C# .NET en
-                      kijk ik er naar uit om dit in praktijk om te zetten.</p>
+                      Ik ben gepassioneerd door alles wat met computers te maken heeft, 
+                      actualiteit, politieke en maatschappelijke thema's. Tevens ben ik veel bezig met muziek en behaalde een hogere graad cello.
+                      Ik ben gebeten door de opleiding C# .NET en
+                      kijk er naar uit om dit in praktijk om te zetten.</p>
                   </div>
 
                 </div>
