--- a/index.html
+++ b/index.html
@@ -89,12 +89,7 @@
                     <img src="./assets/images/avatars/No-Avatar.png" class="student-img" alt="...">
 
                     <h2 class="center-text">Andreas</h2>
-                    <p class="student-text">De opleiding wordt n tot junior mMotivatie speelt hier dan ook een heel
-                      grote
-                      rol. Alle
-                      cursisten werden vooraf gescreend, getest en bevraagd naar hun motivatie. Uit het ruime aanbod van
-                      meer
-                      dan 100 kandidaten zijn de bovenstaande cursisten geselecteerd.</p>
+                    <p class="student-text">Ik ben Andreas, een Junior .Net-ontwikkelaar en ik geniet van het schrijven van een leesbare, aanpasbare en eenvoudige code die werkt. Ik heb een innovatieve houding ten aanzien van het oplossen van problemen en ben in staat om elk team van ontwikkelaars te versterken door diversiteit, levenservaring en creatieve input aan tafel te brengen.</p>
                   </div>
                 </div>
               </div>
