--- a/index.html
+++ b/index.html
@@ -365,7 +365,7 @@
               <div class="card__face card__face--back">
                 <div class="student-card rounded-border boxshadow ">
                   <img class="turnb" src="./assets/images/FlipCardb.png" />
-                  <img src="./assets/images/avatars/No-Avatar.png" class="student-img" alt="...">
+                  <img src="./assets/images/Kobe.jpg" class="student-img" alt="...">
                   <div class="card-body"><h2 class="center-text">Kobe Delobelle</h2>
                     <div class="student-text social-wrap">
                       <img src="./assets/images/linkedin.svg" alt="linkedin" class="social-icons">
